First two blocks on home page now up

--- a/src/OTS/CoreBundle/Resources/views/Core/index.html.twig
+++ b/src/OTS/CoreBundle/Resources/views/Core/index.html.twig
@@ -22,9 +22,18 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-xs-12">
-            <h2></h2>
+    <div class="row text-center">
+        <div class="col-xs-12" id="opening-hours">
+            <h2>Opening time</h2>
+
+            <p class="left-centered">
+                Open every day except tuesday<br />
+                From 9am to 6pm<br />
+                Open until 9.45pm on wednesday and friday
+                <br /><br />
+                
+                Closed on the 1st of May, the 1st of November and the 25th of december
+            </p>
         </div>
     </div>
 {% endblock %}
