--- a/web/bundles/otscore/css/home.css
+++ b/web/bundles/otscore/css/home.css
@@ -2,8 +2,22 @@
 	width: 100%;
 	height: 100vh;
 	margin: 0;
-	
+
 	background-image: url('http://assets.fhuszti.com/louvre/home/home-cover.jpg');
 	background-size: cover;
 	background-position: center 20%;
+}
+
+#opening-hours {
+	padding-top: 10px;
+	padding-bottom: 30px;
+	background-color: #c82d00;
+	color: white;
+}
+#opening-hours h2 {
+	margin-bottom: 30px;
+}
+.left-centered {
+	display: inline-block;
+	text-align: left;
 }
