--- a/web/bundles/otscore/css/footer.css
+++ b/web/bundles/otscore/css/footer.css
@@ -2,5 +2,9 @@
 	background-color: #222;
 	color: white;
 	text-align: center;
-	line-height: 40px;
+	padding: 10px 0;
+}
+
+#footer div {
+	margin: 5px 0;
 }
