Last block of the homepage done

--- a/src/OTS/CoreBundle/Resources/views/Core/index.html.twig
+++ b/src/OTS/CoreBundle/Resources/views/Core/index.html.twig
@@ -41,49 +41,49 @@
         <div class="match-my-cols">
             <div class="col-xs-12 col-sm-6 price-block">
                 <div class="price-box">
-                <h2>Normal rate</h2>
+                    <h2>Normal rate</h2>
 
-                <p>
-                    12 years old and older
-                </p>
+                    <p>
+                        12 years old and older
+                    </p>
 
-                <h3>16€</h3>
+                    <h3>16€</h3>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-6 price-block">
                 <div class="price-box">
-                <h2>Discounted rate</h2>
+                    <h2>Discounted rate</h2>
 
-                <p>
-                    Student, french military, museum employee or Ministry of Culture employee
-                </p>
+                    <p>
+                        Student, french military, museum employee or Ministry of Culture employee
+                    </p>
 
-                <h3>10€</h3>
+                    <h3>10€</h3>
                 </div>
             </div>
         </div>
         <div class="match-my-cols">
             <div class="col-xs-12 col-sm-6 price-block">
                 <div class="price-box">
-                <h2>Child rate</h2>
+                    <h2>Child rate</h2>
 
-                <p>
-                    From 4 to 12 years old<br />
-                    Free for children younger than 4
-                </p>
+                    <p>
+                        From 4 to 12 years old<br />
+                        Free for children younger than 4
+                    </p>
 
                 <h3>8€</h3>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-6 price-block">
                 <div class="price-box">
-                <h2>Senior rate</h2>
+                    <h2>Senior rate</h2>
 
-                <p>
-                    60 years old and older
-                </p>
+                    <p>
+                        60 years old and older
+                    </p>
 
-                <h3>12€</h3>
+                    <h3>12€</h3>
                 </div>
             </div>
         </div>
@@ -92,6 +92,38 @@
        <a class="btn btn-default btn-lg" id="booking-btn" href="{{ path('ots_billing_home') }}">
             Book a ticket online
         </a>
+        </div>
+    </div>
+
+    <div class="row text-center" id="contact">
+        <h2>Contact</h2>
+
+        <div class="vertical-align">
+            <div class="col-xs-12 col-sm-6">
+                <address class="left-centered">
+                    Musée du Louvre, Pavillon Mollien,<br />
+                    75058 PARIS CEDEX 01<br />
+                    FRANCE
+                </address>
+            </div>
+            <div class="col-xs-12 col-sm-6">
+                <p class="hr-border">
+                    +33 (0)1 40 20 53 17<br />
+                    info@louvre.fr
+                </p>
+                
+                <p>
+                    <a href="https://www.facebook.com" title="Facebook">
+                        <i class="fa fa-facebook-square fa-3x"></i>
+                    </a>
+                    <a href="https://plus.google.com" title="Google+">
+                        <i class="fa fa-google-plus-square fa-3x"></i>
+                    </a>
+                    <a href="https://www.twitter.com" title="Twitter">
+                        <i class="fa fa-twitter-square fa-3x"></i>
+                    </a>
+                </p>
+            </div>
         </div>
     </div>
 {% endblock %}
