--- a/src/OTS/CoreBundle/Resources/views/layout.html.twig
+++ b/src/OTS/CoreBundle/Resources/views/layout.html.twig
@@ -9,6 +9,7 @@
 	  	{% block stylesheets %}
 		  	{% stylesheets filter='cssrewrite'
 		  		'//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'
+		  		'../vendor/components/font-awesome/css/font-awesome.min.css'
 		  		'bundles/otscore/css/header.css'
 		  		'bundles/otscore/css/footer.css' %}
 		  		<link rel="stylesheet" href="{{ asset_url }}" type="text/css">
