--- a/web/bundles/otscore/css/header.css
+++ b/web/bundles/otscore/css/header.css
@@ -1,6 +1,34 @@
+@font-face {
+	font-family: 'Work Sans';
+	src: url('../fonts/WorkSans-Regular.eot');
+	src: url('../fonts/WorkSans-Regular.eot?iefix') format('eot'),
+	     url('../fonts/WorkSans-Regular.woff') format('woff'),
+     	 url('../fonts/WorkSans-Regular.woff2') format('woff2'),
+	     url('../fonts/WorkSans-Regular.ttf') format('truetype'),
+	     url('../fonts/WorkSans-Regular.svg#webfont') format('svg');
+}
+
+body {
+	font-family: 'Work Sans', Arial, sans-serif;
+}
+
 #header {
 	background-color: #222;
-	color: white;
-	height: 80px;
 	border: none;
+	font-size: 1.2em;
+}
+#header .navbar-header, #header .navbar-collapse, #header ul {
+	height: 80px;
+}
+#header .nav a {
+	color: #eee;
+	padding: 0 15px;
+	margin: 30px 0 25px 0;
+}
+#header .nav a:focus, #header .nav a:active, #header .nav a:hover, #header .active a {
+	background-color: inherit;
+	color: white;
+}
+#header .active {
+	border-bottom: 5px solid #eee;
 }
