--- a/src/OTS/CoreBundle/Resources/views/Core/index.html.twig
+++ b/src/OTS/CoreBundle/Resources/views/Core/index.html.twig
@@ -21,6 +21,20 @@
     <div class="row" id="cover">
         <div class="col-xs-12" id="cover-img">
         </div>
+
+        <div class="title-block">
+            <h1>Online Ticketing Service, Musée du Louvre</h1>
+
+            <h2>Current exhibition: Vermeer and the masters of genre painting</h2>
+        </div>
+
+        <a class="btn btn-default btn-lg" id="booking-btn" href="{{ path('ots_billing_home') }}">
+            Book a ticket online
+        </a>
+
+        <a href="#opening-time" title="Read more about our offers" class="scrollspy-link">
+            Read more
+        </a>
     </div>
 
     <div class="row text-center">
@@ -90,9 +104,9 @@
         </div>
 
        <div class="col-xs-12">
-       <a class="btn btn-default btn-lg" id="booking-btn" href="{{ path('ots_billing_home') }}">
-            Book a ticket online
-        </a>
+           <a class="btn btn-default btn-lg" id="booking-btn" href="{{ path('ots_billing_home') }}">
+                Book a ticket online
+            </a>
         </div>
     </div>
 
