--- a/web/bundles/otscore/css/home.css
+++ b/web/bundles/otscore/css/home.css
@@ -1,3 +1,8 @@
+#cover {
+	position: relative;
+	text-align: center;
+	color: #eee;
+}
 #cover-img {
 	width: 100%;
 	height: 100vh;
@@ -6,6 +11,28 @@
 	background-image: url('http://assets.fhuszti.com/louvre/home/home-cover.jpg');
 	background-size: cover;
 	background-position: center 20%;
+}
+#cover .title-block {
+	position: absolute;
+	top: 40%;
+	width: 100%;
+	background-color: rgb(20, 20, 20);
+	background-color: rgba(20, 20, 20, 0.7);
+	padding: 10px 10px;
+}
+#cover a {
+	position: absolute;
+	bottom: 10px;
+	left: 50%;
+	transform: translateX(-50%);
+	display: block;
+	margin: auto;
+	color: #eee;
+	font-size: 1.3em;
+}
+#cover a[class~="btn"] {
+	background-image: radial-gradient(circle at bottom, #222, #331107);
+	bottom: 10%;
 }
 
 #opening-time {
@@ -80,8 +107,20 @@
 
 
 
+@media (max-width: 500px) {
+	#cover .title-block {
+		top: 25%;
+	}
+}
 @media (max-width: 767px) {
 	.vertical-align {
 		display: block;
+	}
+
+	#cover h1 {
+		font-size: 26px;
+	}
+	#cover h2 {
+		font-size: 20px;
 	}
 }
