--- a/web/bundles/otscore/css/header.css
+++ b/web/bundles/otscore/css/header.css
@@ -13,20 +13,23 @@ body {
 }
 
 #header {
-	background-color: #222;
+	background-color: rgba(34, 34, 34, 1);
 	border: none;
 	font-size: 1.2em;
 }
 .navbar, #header .nav li, #header .nav {
 	z-index: 9999;
 }
+#header .navbar-brand {
+	padding: 5px 15px;
+}
 #header .navbar-header, #header .navbar-collapse, #header ul {
-	height: 80px;
+	height: 60px;
 }
 #header .nav a {
 	color: #eee;
 	padding: 0 15px;
-	margin: 30px 0 25px 0;
+	margin: 20px 0 15px;
 	z-index: 9999;
 }
 #header .nav a:focus, #header .nav a:active, #header .nav a:hover, #header .active a {
@@ -37,7 +40,7 @@ body {
 	border-bottom: 5px solid #eee;
 }
 #header button {
-	margin: 23px 25px 23px 0;
+	margin: 13px 25px 13px 0;
 }
 
 
@@ -46,6 +49,7 @@ body {
 @media (max-width: 767px) {
 	#header .navbar-collapse, #header ul {
 		height: auto;
+		border: none;
 	}
 
 	#header .nav a {
