--- a/src/OTS/CoreBundle/Resources/views/layout.html.twig
+++ b/src/OTS/CoreBundle/Resources/views/layout.html.twig
@@ -9,6 +9,7 @@
 	  	{% block stylesheets %}
 		  	{% stylesheets filter='cssrewrite'
 		  		'//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'
+		  		'//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css'
 		  		'../vendor/components/font-awesome/css/font-awesome.min.css'
 		  		'bundles/otscore/css/main.css'
 		  		'bundles/otscore/css/header.css'
@@ -96,7 +97,8 @@
 	  	{% block javascripts %}
 	  		{% javascripts
 		  		'//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'
-		  		'//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js' %}
+		  		'//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'
+		  		'//code.jquery.com/ui/1.12.1/jquery-ui.js' %}
 		  		<script type="text/javascript" src="{{ asset_url }}"></script>
 		  	{% endjavascripts %}
 	  	{% endblock %}
