Created the ticket form

--- a/src/OTS/BillingBundle/Resources/views/Billing/index.html.twig
+++ b/src/OTS/BillingBundle/Resources/views/Billing/index.html.twig
@@ -50,7 +50,7 @@
                 <h2>Informations</h2>
                 <hr />
 
-                
+                {{ form(ticketForm) }}
             </div>
             <div class="tab-pane fade" id="payment">
                 <h2>Payment</h2>
