Step tabs in the booking form now look like tabs

--- a/src/OTS/BillingBundle/Resources/views/Billing/index.html.twig
+++ b/src/OTS/BillingBundle/Resources/views/Billing/index.html.twig
@@ -22,9 +22,9 @@
     <hr />
 
     <div class="row">
-        <p id="step_checker">{{ flow.getCurrentStepNumber() }}</p>
+        <p id="step_checker" class="hidden">{{ flow.getCurrentStepNumber() }}</p>
         <div>
-            {% include '@CraueFormFlow/FormFlow/stepList.html.twig' %}
+            {% include 'OTSBillingBundle:Billing:stepList_content.html.twig' %}
         </div>
         {{ form_start(orderForm, {
                 'action': path(app.request.attributes.get('_route'),
