--- a/web/bundles/otscore/css/billing.css
+++ b/web/bundles/otscore/css/billing.css
@@ -40,15 +40,6 @@
 }
 
 
-.tab-content {
-	padding: 0 20px;
-}
-.tab-pane h2 {
-	color: #331107;
-	margin-left: 30px;
-}
-
-.well {
-	padding-top: 0;
-	margin-top: 20px;
+form {
+	padding: 30px 30px 20px;
 }
